Fix z-index for `MentorCard` and `NavigationBar`

--- a/groundzero/src/index.css
+++ b/groundzero/src/index.css
@@ -181,7 +181,7 @@ This file contains styling customization for fonts and colors.
   gap: 1rem;
   padding: 0.5rem 3rem;
   position: fixed;
-  z-index: 1020;
+  z-index: 30;
   top: 0;
 }
 
